Fix #63: Small layout break in iOS mobile

--- a/src/_mystyle.scss
+++ b/src/_mystyle.scss
@@ -470,7 +470,7 @@ footer {
   background-repeat: no-repeat;
   color:#fff;
   #contact-form{
-      padding: 20px 0;
+      padding: 20px 15px;
     @include media-breakpoint-up(sm) {
       padding: 20px 100px;
     }
